syntax = "proto3";

option java_package = "test.beans2";

option java_multiple_files = true;

import "test/beans2/MediaFormat.proto";
import "test/beans2/StreamMetadata.proto";

message StartData {
  string accountSid = 1;
  string streamSid = 2;
  string callSid = 3;
  repeated string tracks0 = 4;

  MediaFormat mediaFormat = 5;
  StreamMetadata streamMetadata = 6;
}
